<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent" android:layout_height="wrap_content"
    android:background="@color/surface" android:padding="@dimen/space_small">
    <Button android:id="@+id/nav_home" style="@style/NavAction" android:text="@string/nav_home"
        app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toStartOf="@id/nav_history"
        app:layout_constraintTop_toTopOf="parent" app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_chainStyle="spread" />
    <Button android:id="@+id/nav_history" style="@style/NavAction" android:text="@string/nav_history"
        app:layout_constraintStart_toEndOf="@id/nav_home" app:layout_constraintEnd_toStartOf="@id/nav_izin"
        app:layout_constraintTop_toTopOf="parent" app:layout_constraintBottom_toBottomOf="parent" />
    <Button android:id="@+id/nav_izin" style="@style/NavAction" android:text="@string/nav_izin"
        app:layout_constraintStart_toEndOf="@id/nav_history" app:layout_constraintEnd_toStartOf="@id/nav_account"
        app:layout_constraintTop_toTopOf="parent" app:layout_constraintBottom_toBottomOf="parent" />
    <Button android:id="@+id/nav_account" style="@style/NavAction" android:text="@string/nav_account"
        app:layout_constraintStart_toEndOf="@id/nav_izin" app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" app:layout_constraintBottom_toBottomOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>
