<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools" style="@style/Screen">
    <ImageView android:id="@+id/company_logo" style="@style/Body"
        app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" android:layout_width="@dimen/logo_width" android:layout_height="@dimen/logo_height" android:src="@drawable/company_logo" android:scaleType="fitCenter" android:contentDescription="@string/logo_description" />
    <TextView android:id="@+id/success_title" style="@style/Title" android:text="@string/success_title"
        app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/company_logo" android:layout_marginTop="@dimen/space_medium" android:gravity="center" android:textColor="@color/brand_dark" />
    <TextView android:id="@+id/success_note" style="@style/Body" android:text="@string/success_note"
        app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/success_title" android:layout_marginTop="@dimen/space_medium" android:gravity="center" />
    <TextView android:id="@+id/success_detail" style="@style/Body"
        app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/success_note" android:layout_marginTop="@dimen/space_medium" android:background="@drawable/card" tools:text="Absen masuk tercatat" />
    <Button android:id="@+id/back_home" style="@style/Action" android:text="@string/back_home"
        app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/success_detail" android:layout_marginTop="@dimen/space_medium"  />
</androidx.constraintlayout.widget.ConstraintLayout>
