<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools" style="@style/Screen">
    <TextView android:id="@+id/history_title" style="@style/Title" android:text="@string/history_title"
        app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"  />
    <TextView android:id="@+id/history_note" style="@style/Muted" android:text="@string/history_note"
        app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/history_title" android:layout_marginTop="@dimen/space_medium"  />
    <TextView android:id="@+id/history_empty" style="@style/Body" android:text="@string/history_empty"
        app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/history_note" android:layout_marginTop="@dimen/space_medium" android:background="@drawable/card" />
    <LinearLayout android:id="@+id/history_entries" style="@style/Body"
        app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/history_empty" android:layout_marginTop="@dimen/space_medium" android:orientation="vertical" tools:listitem="@layout/item_attendance" />
</androidx.constraintlayout.widget.ConstraintLayout>
